Attempt to fix height on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    max-height: -webkit-fill-available;
 }
 
 .fade-hr {
